--- a/proposal/abstract.tex
+++ b/proposal/abstract.tex
@@ -26,7 +26,7 @@ I intend to build \sysname, a logic language inspired by Datalog with features g
 %Proof properties
 %Combining both dynamic and static analyses leads to greater dominance
 I hope to use this system to demonstrate how the use of logic languages for communication can make writing interdependent analyses easier.
-I want to explore the formal properties of the \sysname\ langugage, specifically with respect to termination and monotonicity of reasoning off subsumed facts.
+I want to explore the formal properties of the \sysname\ language, specifically with respect to termination and monotonicity of reasoning off subsumed facts.
 I will also evaluate the power of combining analyses via \sysname\ which have been traditionally examined separately.
 
 %Work Plan
