--- a/proposal/holmes.tex
+++ b/proposal/holmes.tex
@@ -98,7 +98,7 @@ The major sticking points in finalizing this system will probably be:
 \begin{itemize}
 \item {\bf Rule firing order.}
 
-While forwards verus backwards chaining puts certain constraints on which rules can fire, this may need to be constrained further for a workable system.
+While forwards versus backwards chaining puts certain constraints on which rules can fire, this may need to be constrained further for a workable system.
 I hope to leave it unconstrained, as this will make work on scheduling them more interesting, but it could easily be an issue.
 
 \item {\bf External code binding.}
