--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -69,14 +69,14 @@ Manuel Egele, Boston University
 \mainmatter
 \chapter{Introduction}
 \input{introduction.tex}
-\chapter{Related Work}
-\input{related.tex}
-\chapter{Completed Work}
-\input{completed.tex}
-\chapter{Specifics}
+\chapter{Background}
+\input{background.tex}
+\chapter{Holmes}
 \input{holmes.tex}
-\chapter{Conclusion}
-\input{conclusion.tex}
+\chapter{Integration}
+\input{integration.tex}
+\chapter{Proposed Work}
+\input{proposed.tex}
 
 \backmatter
 \renewcommand{\bibsection}{\chapter{\bibname}}
