Finished up outline

--- a/proposal/proposed.tex
+++ b/proposal/proposed.tex
@@ -1,1 +1,18 @@
+% Implement Holmes
+% * Logic server/backing
+% * Analyses
+%   * CFG (pure holmes?)
+%   * VSA
+%   * BiTR
+%   * Fuzz
+%   * Alias (TODO decide which)
 
+% Verify Reasoning over Holmes
+% * Proof of monotonicity of aggregators
+% * Soundness of hypothetical circumscription
+% * (Optional/extension) Subset which terminates
+
+% Quantify interactions between analyses
+% * Measure improvements from integrating analyses over traditional implementations
+% * Meaure the marginal improvements from each interaction
+% * Look to see if any of the improvements are greater than the sum of their parts
